collapse issue

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -175,7 +175,7 @@ legend {
   font-size: 1.1em;
   font-weight: bold;
   padding: 2px 4px 8px 4px;
-  width: 29%;
+  width: auto;
   border-bottom: none;
 }
 
